[FSAR-249] Fixing spacing in search elements

--- a/src/components/search/ListingItem/listingItem.scss
+++ b/src/components/search/ListingItem/listingItem.scss
@@ -3,6 +3,10 @@
 .listing-item {
   margin-top: 1.5rem;
   position: relative;
+  // Remove margin-top of 1st element only when there's no filters selected
+  .two-col__right-top + .listing &:first-child {
+    margin-top: 0;
+  } 
 
   &::after {
     background: var(--fsa_border);
