--- a/src/layout/twoColumn/twoColumn.scss
+++ b/src/layout/twoColumn/twoColumn.scss
@@ -49,7 +49,6 @@
     flex-direction: column;
     justify-content: center;
     align-items: flex-start;
-    margin-bottom: 2rem;
 
     @media screen and (min-width: $fsa-md) {
       flex-direction: row;
